[gd_scene load_steps=4 format=3 uid="uid://b5x8u43ipirbi"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_suxk0"]
[ext_resource type="Texture2D" uid="uid://c3o3y3ft67s1i" path="res://assets/graphics/backgrounds/background.png" id="2_2kvi5"]
[ext_resource type="Script" path="res://scenes/background.gd" id="3_v4o5j"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_suxk0")

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_2kvi5")
centered = false
script = ExtResource("3_v4o5j")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.929412, 0.898039, 0.580392, 1)
theme_override_colors/font_outline_color = Color(0.0431373, 0.298039, 0.286275, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "FORT MAGICA"
fit_content = true
autowrap_mode = 0

[node name="StartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "NEW GAME"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="EnglishButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "ENGLISH"

[node name="RussianButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "РУССКИЙ"

[node name="CreditsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "CREDITS"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "QUIT"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/EnglishButton" to="." method="_on_english_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/RussianButton" to="." method="_on_russian_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
